--- a/rapport/main.tex
+++ b/rapport/main.tex
@@ -122,7 +122,7 @@ Nous pouvons définir les variables $Y_{n, i}$ comme suit :
     \item Il faut qu'il y ait un et un seul état initial 
     \item Il faut qu'il y ait au moins un état final
     \item Il faut que l'ensemble $P$ soit inclus dans l'ensemble des mots acceptés par l'automate 
-    \item Un mot se trouvant dans l'ensemble $N$ ne peut pas se trouver dans l'ensemble $P$ 
+    \item Un mot se trouvant dans l'ensemble $N$ ne peut pas être un état acceptant
     \item Chaque état doit avoir toutes les transitions possibles. 
 \end{itemize}
 % subsection Contraintes (end)
@@ -152,9 +152,9 @@ Voici les contraintes que nous avons définies pour modéliser un automate en FN
     \begin{itemize}[label=$\circ$]
         \item $\bigwedge_{p \in P} \bigwedge_{i \in Q} X_{p, i}$
     \end{itemize}
-    \item Un mot se trouvant dans l'ensemble $N$ ne peut pas se trouver dans l'ensemble $P$ : 
+    \item Un mot se trouvant dans l'ensemble $N$ ne peut pas être un état acceptant : 
     \begin{itemize}[label=$\circ$]
-        \item $\bigwedge_{p \in P} \bigwedge_{n \in N} \bigwedge_{i \in Q} \neg (X_{p, i} \wedge Y_{n, i})$
+        \item $\bigwedge_{n\in N}\bigwedge_{i\in Q}(Y_{n,i})$
     \end{itemize} 
     \item Chaque état doit avoir toutes les transitions possibles (automate complet) : 
     \begin{itemize}[label=$\circ$]
